# rgla

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix
demo/: CMakeLists.txt
demo/include/: rgla_application.hpp
demo/src/: main.cpp  rgla_application.cpp
include/: application.hpp  common.hpp  input.hpp  logging.hpp  math.hpp  mesh.hpp  quad.hpp  rgla_application.hpp  rgla_config.h.in  scene.hpp  shader.hpp  sprite.hpp  texture.hpp  vertex.hpp  window.hpp
include/glad/: glad.h
shaders/: basic.fs  basic.vs
src/: glad.c  logging.cpp  main.cpp  math.cpp  mesh.cpp  rgla_application.cpp  scene.cpp  shader.cpp  texture.cpp  window.cpp
